compiler-frontend/lexing/tests/snapshots/lexer__control.snap
---
source: compiler-frontend/lexing/tests/lexer.rs
description: "(\n)\n{ \n}\n[\n]\n"
---
annotation : ""
 qualifier : ""
      kind : LEFT_PARENTHESIS
      text : "("
  position : Position { line: 1, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : RIGHT_PARENTHESIS
      text : ")"
  position : Position { line: 2, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : LEFT_CURLY
      text : "{"
  position : Position { line: 3, column: 1 }
     error : None

annotation : " \n"
 qualifier : ""
      kind : RIGHT_CURLY
      text : "}"
  position : Position { line: 4, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : LEFT_SQUARE
      text : "["
  position : Position { line: 5, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : RIGHT_SQUARE
      text : "]"
  position : Position { line: 6, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : END_OF_FILE
      text : ""
  position : Position { line: 7, column: 1 }
     error : None
