compiler-frontend/lexing/tests/snapshots/lexer__end_of_file.snap
---
source: compiler-frontend/lexing/tests/lexer.rs
description: ""
---
annotation : ""
 qualifier : ""
      kind : END_OF_FILE
      text : ""
  position : Position { line: 1, column: 1 }
     error : None
