compiler-frontend/lexing/tests/snapshots/lexer__end_of_file_qualifier.snap
---
source: compiler-frontend/lexing/tests/lexer.rs
description: "Hello.\n"
---
annotation : ""
 qualifier : "Hello."
      kind : ERROR
      text : ""
  position : Position { line: 1, column: 1 }
     error : Some("Expected a token")

annotation : "\n"
 qualifier : ""
      kind : END_OF_FILE
      text : ""
  position : Position { line: 2, column: 1 }
     error : None
