compiler-frontend/lexing/tests/snapshots/lexer__hole_or_lower.snap
---
source: compiler-frontend/lexing/tests/lexer.rs
description: "_\n\n__\n"
---
annotation : ""
 qualifier : ""
      kind : UNDERSCORE
      text : "_"
  position : Position { line: 1, column: 1 }
     error : None

annotation : "\n\n"
 qualifier : ""
      kind : LOWER
      text : "__"
  position : Position { line: 3, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : END_OF_FILE
      text : ""
  position : Position { line: 4, column: 1 }
     error : None
