compiler-frontend/lexing/tests/snapshots/lexer__integer.snap
---
source: compiler-frontend/lexing/tests/lexer.rs
description: "123\n\n123_123\n\n00_123_123\n\n0xFFFFFF\n"
---
annotation : ""
 qualifier : ""
      kind : INTEGER
      text : "123"
  position : Position { line: 1, column: 1 }
     error : None

annotation : "\n\n"
 qualifier : ""
      kind : INTEGER
      text : "123_123"
  position : Position { line: 3, column: 1 }
     error : None

annotation : "\n\n"
 qualifier : ""
      kind : INTEGER
      text : "00_123_123"
  position : Position { line: 5, column: 1 }
     error : Some("Too many leading zeros")

annotation : "\n\n"
 qualifier : ""
      kind : INTEGER
      text : "0xFFFFFF"
  position : Position { line: 7, column: 1 }
     error : None

annotation : "\n"
 qualifier : ""
      kind : END_OF_FILE
      text : ""
  position : Position { line: 8, column: 1 }
     error : None
